--- a/airport/templates/template.html
+++ b/airport/templates/template.html
@@ -28,11 +28,13 @@
                         {% csrf_token %}
                         <div class="form-group">
                           <label for="register_username">Username</label>
-                          <input type="text" class="form-control" id="register_username" name="username" placeholder="Username">
+                          <input type="text" class="form-control" id="register_username"
+                                 name="username" placeholder="Username" />
                         </div>
                         <div class="form-group">
                           <label for="register_password">Password</label>
-                          <input type="password" class="form-control" id="register_password" name="password" placeholder="Password">
+                          <input type="password" class="form-control" id="register_password"
+                                 name="password" placeholder="Password" autocomplete="current-password" />
                         </div>
                         <button type="submit" class="btn btn-primary">Sign up</button>
                     </form>
@@ -47,11 +49,13 @@
                         {% csrf_token %}
                         <div class="form-group">
                           <label for="login_username">Username</label>
-                          <input type="text" class="form-control" id="login_username" name="username" placeholder="Username" />
+                          <input type="text" class="form-control" id="login_username"
+                                 name="username" placeholder="Username" />
                         </div>
                         <div class="form-group">
                           <label for="login_password">Password</label>
-                          <input type="password" class="form-control" id="login_password" name="password" placeholder="Password" />
+                          <input type="password" class="form-control" id="login_password"
+                                 name="password" placeholder="Password" autocomplete="current-password" />
                         </div>
                         <button type="submit" class="btn btn-primary">Log in</button>
                     </form>
@@ -61,10 +65,14 @@
         </div>
     </nav>
 
-    <section>
-        {% block content %}{% endblock %}
+    <section class="container h-100">
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-10">{% block content %}{% endblock %}</div>
+            <div class="col-1"></div>
+        </div>
     </section>
-    <footer>
+    <footer class="w-100 text-center text-muted align-bottom position-absolute" style="bottom: 0;">
         2018 - Project for "WWW Applications" course during studies at University of Warsaw by Michał Ołtarzewski
     </footer>
 
