Fix; Deleted redundant file; Added flights list with search

--- a/airport/templates/template.html
+++ b/airport/templates/template.html
@@ -72,7 +72,7 @@
             <div class="col-1"></div>
         </div>
     </section>
-    <footer class="w-100 text-center text-muted align-bottom position-absolute" style="bottom: 0;">
+    <footer class="w-100 text-center text-muted" style="bottom: 0;">
         2018 - Project for "WWW Applications" course during studies at University of Warsaw by Michał Ołtarzewski
     </footer>
 
