--- a/airport/templates/accountManagement.html
+++ b/airport/templates/accountManagement.html
@@ -33,5 +33,5 @@
             You've successfully logged out!
         </div>
     {% endif %}
-    <button type="button" class="btn btn-secondary" href="{% url 'main' %}">Return to main page</button>
+    <a class="btn btn-secondary" href="{% url 'main' %}">Return to main page</a>
 {% endblock %}
