--- a/airport/templates/main.html
+++ b/airport/templates/main.html
@@ -2,4 +2,33 @@
 
 {% block subtitle %}Flights List{% endblock %}
 
-{% block content %}{% endblock %}
+{% block content %}
+    <form class="form-group row mt-2 mb-2 ml-auto mr-auto" method="POST" action="{% url 'main' %}">
+        {% csrf_token %}
+        <label for="dateInput" class="col-form-label col-2">Search date</label>
+        <div class="col-8">
+            <input type="date" id="dateInput" name="search" class="form-control text-center" value="2018-01-01" />
+        </div>
+        <button class="btn btn-primary" type="submit" href="{% url 'main' %}">Search</button>
+    </form>
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Departure</th>
+                <th scope="col">Arrival</th>
+                <th scope="col">From</th>
+                <th scope="col">To</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for flight in flights %}
+                <tr>
+                    <td>{{ flight.startTime }}</td>
+                    <td>{{ flight.endTime }}</td>
+                    <td>{{ flight.startAirport }}</td>
+                    <td>{{ flight.endAirport }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+{% endblock %}
