--- a/airport/templates/template.html
+++ b/airport/templates/template.html
@@ -29,7 +29,7 @@
                         <div class="form-group">
                           <label for="register_username">Username</label>
                           <input type="text" class="form-control" id="register_username"
-                                 name="username" placeholder="Username" />
+                                 name="username" placeholder="Username" autocomplete="username" />
                         </div>
                         <div class="form-group">
                           <label for="register_password">Password</label>
@@ -50,7 +50,7 @@
                         <div class="form-group">
                           <label for="login_username">Username</label>
                           <input type="text" class="form-control" id="login_username"
-                                 name="username" placeholder="Username" />
+                                 name="username" placeholder="Username" autocomplete="username" />
                         </div>
                         <div class="form-group">
                           <label for="login_password">Password</label>
