Added Selenium tests

--- a/airport/templates/template.html
+++ b/airport/templates/template.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="btn-group nav-item">
-                <a class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">
+                <a class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" id="login_dropdown">
                     Login
                 </a>
                 <div class="dropdown-menu dropdown-menu-right">
