--- a/airport/templates/flight.html
+++ b/airport/templates/flight.html
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Buy ticket</button>
+                        <button type="submit" class="btn btn-primary" id="buy_ticket_button">Buy ticket</button>
                     </div>
                 </form>
             </div>
